# Crc-calculator

./: CMakeLists.txt  Crc_Cal.cpp  Crc_Cal.h  LICENSE  README.md  main.cpp  module.cpp
Crc/CRC_64_ECMA/: CMakeLists.txt  Crc_64_ECMA.cpp  Crc_64_ECMA.h
Crc/Crc_15_CAN/: CMakeLists.txt  Crc_15_CAN.cpp  Crc_15_CAN.h
Crc/Crc_16_DECT_R/: CMakeLists.txt  Crc_16_DECT_R.cpp  Crc_16_DECT_R.h
Crc/Crc_17_CAN/: CMakeLists.txt  Crc_17_CAN.cpp  Crc_17_CAN.h
Crc/Crc_21_CAN/: CMakeLists.txt  Crc_21_CAN.cpp  Crc_21_CAN.h
Crc/Crc_32/: CMakeLists.txt  Crc_32.cpp  Crc_32.h
Crc/Crc_64_ECMA/: Crc_64_ECMA.cpp  Crc_64_ECMA.h
Crc/Crc_8/: CMakeLists.txt  Crc_8.cpp  Crc_8.h
Functions/: CMakeLists.txt  Functions.cpp  Functions.h
