cmake_minimum_required (VERSION 3.16)
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()
project (Crc_Cal)
set(CMAKE_CXX_STANDARD 17)
add_executable(Crc_Cal_App main.cpp Crc_Cal.cpp)

add_subdirectory(pybind11)
pybind11_add_module(Crc_Cal_Module module.cpp Crc_Cal.cpp)
